fix(jdbc): merge the locked execution with the received execution to handle parallel tasks execution (#2209)
Fixes #2179